--- a/views/getCityForm.html
+++ b/views/getCityForm.html
@@ -9,7 +9,7 @@
       <form method="GET" action="/tripsByCity">
         <div class="form-group">
           <label for="city">City</label>
-          <select class="form-control" id="city" name="city">
+          <select class="form-control" id="city" name="city" style="width: 200px;">
             <option value="chicago">Chicago</option>
             <option value="cincinnati">Cincinnati</option>
             <option value="nashville">Nashville</option>
