--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 </head>
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/"><img src="/images/Sun.png" alt=""></a>
+        <a class="navbar-brand" href="/"><img src="/images/Car.png" alt=""></a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
