--- a/views/showAll.html
+++ b/views/showAll.html
@@ -32,6 +32,23 @@
 								class="btn btn-primary btn-sm"
 								>Edit</a
 							>
+							<form
+								method="POST"
+								action="/deleteTrip"
+								class="d-inline"
+							>
+								<input
+									type="hidden"
+									name="date"
+									value="{{ trip.date }}"
+								/>
+								<button
+									type="submit"
+									class="btn btn-danger btn-sm"
+								>
+									Delete
+								</button>
+							</form>
 						</td>
 					</tr>
 					{% endfor %}
