--- a/views/editTripForm.html
+++ b/views/editTripForm.html
@@ -1,65 +1,94 @@
-{% extends 'index.html' %}
+{% extends 'index.html' %} {% block content %}
 
-{% block content %}
-
-<p class="mt-4 text-center text-muted font-weight-bold">Trip Date: {{tripInfo.date}}</p>
+<p class="mt-4 text-center text-muted font-weight-bold">
+	Trip Date: {{tripInfo.date}}
+</p>
 
 <form method="POST" action="/updateTrip" class="mt-4">
-  <input type="hidden" name="trip_date" value="{{tripInfo.date}}">
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <table class="table">
-          <tbody>
-            <tr>
-              <td>City</td>
-              <td>{{tripInfo.city}}</td>
-            </tr>
-            <tr>
-              <td>Miles</td>
-              <td>{{tripInfo.miles}}</td>
-              <td>
-                <button id="miles_button" type="button" class="btn btn-primary btn-sm">Edit</button>
-                <span id="miles_input" style="display: none">
-                  <input type="text" name="newMiles" value="{{tripInfo.miles}}" class="form-control form-control-sm" style="width: 100px;">
-                  <small class="form-text text-muted">Enter New Value</small>
-                </span>
-              </td>
-            </tr>
-            <tr>
-              <td>Gallons</td>
-              <td>{{tripInfo.gallons}}</td>
-              <td>
-                <button id="gallons_button" type="button" class="btn btn-primary btn-sm">Edit</button>
-                <span id="gallons_input" style="display: none">
-                  <input type="text" name="newGallons" value="{{tripInfo.gallons}}" class="form-control form-control-sm" style="width: 100px;">
-                  <small class="form-text text-muted">Enter New Value</small>
-                </span>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-  <div class="mt-3">
-    <input type="submit" class="btn btn-primary">
-  </div>
+	<input type="hidden" name="_id" value="{{tripInfo._id}}" />
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<table class="table">
+					<tbody>
+						<tr>
+							<td>City</td>
+							<td>{{tripInfo.city}}</td>
+						</tr>
+						<tr>
+							<td>Miles</td>
+							<td>{{tripInfo.miles}}</td>
+							<td>
+								<button
+									id="miles_button"
+									type="button"
+									class="btn btn-primary btn-sm"
+								>
+									Edit
+								</button>
+								<span id="miles_input" style="display: none">
+									<input
+										type="text"
+										name="newMiles"
+										value="{{tripInfo.miles}}"
+										class="form-control form-control-sm"
+										style="width: 100px"
+									/>
+									<small class="form-text text-muted"
+										>Enter New Value</small
+									>
+								</span>
+							</td>
+						</tr>
+						<tr>
+							<td>Gallons</td>
+							<td>{{tripInfo.gallons}}</td>
+							<td>
+								<button
+									id="gallons_button"
+									type="button"
+									class="btn btn-primary btn-sm"
+								>
+									Edit
+								</button>
+								<span id="gallons_input" style="display: none">
+									<input
+										type="text"
+										name="newGallons"
+										value="{{tripInfo.gallons}}"
+										class="form-control form-control-sm"
+										style="width: 100px"
+									/>
+									<small class="form-text text-muted"
+										>Enter New Value</small
+									>
+								</span>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+	<div class="mt-3">
+		<input type="submit" class="btn btn-primary" />
+	</div>
 </form>
 
 <script>
-    function toggleDisplay(elementId) {
-      const element = document.getElementById(elementId);
-      element.style.display = element.style.display === 'none' ? 'inline' : 'none';
-    }
-    
-    document.getElementById('miles_button').onclick = function() {
-      toggleDisplay('miles_input');
-    }
-    
-    document.getElementById('gallons_button').onclick = function() {
-      toggleDisplay('gallons_input');
-    }
+	function toggleDisplay(elementId) {
+		const element = document.getElementById(elementId);
+		element.style.display =
+			element.style.display === 'none' ? 'inline' : 'none';
+	}
+
+	document.getElementById('miles_button').onclick = function () {
+		toggleDisplay('miles_input');
+	};
+
+	document.getElementById('gallons_button').onclick = function () {
+		toggleDisplay('gallons_input');
+	};
 </script>
 
 {% endblock %}
