deleted driver names from add driver label

--- a/views/addTripForm.html
+++ b/views/addTripForm.html
@@ -29,7 +29,7 @@
 					/>
 				</div>
 				<div class="form-group">
-					<label class="mt-2" for="driver">Driver <span class="text-info">(andy, barb, carl, dana)</span></label>
+					<label class="mt-2" for="driver"></label>
 					<input
 						type="text"
 						class="form-control"
