fixed accidental deletion of label

--- a/views/addTripForm.html
+++ b/views/addTripForm.html
@@ -29,7 +29,7 @@
 					/>
 				</div>
 				<div class="form-group">
-					<label class="mt-2" for="driver"></label>
+					<label class="mt-2" for="driver">Driver</label>
 					<input
 						type="text"
 						class="form-control"
