--- a/views/addTripForm.html
+++ b/views/addTripForm.html
@@ -53,14 +53,17 @@
 				<div class="form-group">
 					<label for="gallons" class="mt-2">Gallons</label>
 					<input
-						type="number"
+						type="text"
 						class="form-control"
 						name="gallons"
 						id="gallons"
 						required
 						style="width: 200px;"
+						pattern="[0-9]+(\.[0-9]{1,2})?"
+						title="Please enter a valid decimal number with up to two decimal places."
 					/>
 				</div>
+				
 			</div>
 		</div>
 	</div>
